--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
   <div class="container">
     <div id="quote-box">
-      <p class="quote"></p>
-      <p class="source">
-        <span class="citation">
+      <p class="quote">Life is like a box of chocolates...you never know what you're gonna get.</p>
+      <p class="source">Forrest Gump
+        <span class="citation">Forrest Gump (Tom Hanks)
         </span>
-        <span class="year">
+        <span class="year">1994
         </span></p>
     </div>
     <button id="loadQuote">Show another quote</button>
