--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
   <div class="container">
     <div id="quote-box">
-      <p class="quote">Life is like a box of chocolates...you never know what you're gonna get.</p>
+      <p class="quote">Life is like a box of chocolates...you never know what you're gonna get.
       <p class="source">Forrest Gump
         <span class="citation">Forrest Gump (Tom Hanks)
         </span>
         <span class="year">1994
-        </span></p>
+        </span>
+        <span class="tags">Drama
+        </span>
+        
     </div>
     <button id="loadQuote">Show another quote</button>
   </div>
