Tried to add the no repeat functionality - not so successful, but everything work

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
   <div class="container">
     <div id="quote-box">
       <p class="quote">Life is like a box of chocolates...you never know what you're gonna get.
+</p>
       <p class="source">Forrest Gump
+      
         <span class="citation">Forrest Gump (Tom Hanks)
         </span>
         <span class="year">1994
         </span>
         <span class="tags">Drama
-        </span>
-        
+        </span></p>
+
     </div>
     <button id="loadQuote">Show another quote</button>
   </div>
